# pytest_cms

./: README.md  conftest.py  pyproject.toml
pytest_cms/config/: __init__.py  cfg.py  dev_env.yml  local_env.yml  pre_env.yml
pytest_cms/fixture/: cms_web_fixture.py
pytest_cms/page/: base.py  home.py  login.py
pytest_cms/report/: 04f799c4-75a0-4998-80e8-5fd4d0766fb8-container.json  0ce1f33a-dcf2-4b05-a600-8043d1a6739c-container.json  0f452e7a-0076-437a-9647-d58561400c14-container.json  1504f85b-6c33-4d78-8b72-6de51125485d-result.json  18413a6f-1cb5-4d11-a036-042e909c483a-container.json  218840b3-c652-4063-af82-7704ea9f6595-result.json  2dd808f7-1a44-49ce-adef-23bd1f55c393-container.json  3270bf5b-5b3e-44a1-8172-ac68c7b1c903-container.json  41a01b17-4ab3-4395-a840-128447bf95b6-container.json  53704f4b-e206-44af-9131-34afb7a2d413-container.json  5814ebdb-49dc-48a1-b29d-cdfbb3119f60-result.json  5c4f02a6-feb4-4fa4-aa00-4771e29a930b-result.json  5ffbae80-1dd3-4029-a113-379ae8100cde-container.json  61289025-26c6-496a-a1dc-2663b3c0bf1b-container.json  7211ccb2-c8a1-4d2e-b7ae-141406f9b62b-container.json  7709a461-e56b-4db5-b474-1338950286aa-container.json  7c130e7e-0ff0-4414-b626-0937e4e10561-container.json  8456b022-9df5-4cdc-9619-1d0b25385a2f-container.json  8c64c970-0737-4e00-bdae-3031b6829a93-result.json  8ef03b5c-e7a8-4d1b-ac5d-b34982c15973-container.json  926cc52b-c922-48bd-a470-52ffad09dddc-container.json  9e0b91d9-0b2f-432a-a1d0-a17ddf821084-container.json  a62cc46c-8934-456d-9e5e-1d5c770c7889-container.json  (+13 more)
tests/: test_component.py  test_login.py
